<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InputActivity"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="分类"
                android:textSize="24sp"></TextView>

            <GridLayout
                android:id="@+id/class_grid"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:columnCount="4"
                android:orientation="horizontal">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/food"
                    android:tag="food">
                    <TextView
                        android:id="@+id/textView"
                        style="@style/IconFont"
                        android:background="@drawable/class_button_focus"
                        android:text="@string/food"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/ClassFont"
                        android:text="餐饮"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView"></TextView>
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/shopping"
                    android:tag="shopping">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/IconFont"
                        android:text="@string/shopping"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/ClassFont"
                        android:text="购物"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"></TextView>
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/entertain"
                    android:tag="entertain">

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/IconFont"
                        android:text="@string/entertain"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/ClassFont"
                        android:text="娱乐/社交"
                        app:layout_constraintEnd_toEndOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"></TextView>
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/medical"
                    android:tag="medical">

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/IconFont"
                        android:text="@string/medical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/ClassFont"
                        android:text="医疗/保健"
                        app:layout_constraintEnd_toEndOf="@+id/textView4"
                        app:layout_constraintStart_toStartOf="@+id/textView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"></TextView>
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/pay"
                    android:tag="pay">

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/IconFont"
                        android:text="@string/pay"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/ClassFont"
                        android:text="缴费/还款"
                        app:layout_constraintEnd_toEndOf="@+id/textView5"
                        app:layout_constraintStart_toStartOf="@+id/textView5"
                        app:layout_constraintTop_toBottomOf="@+id/textView5"></TextView>
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/transportation"
                    android:tag="transportation">

                    <TextView
                        android:id="@+id/textView6"
                        style="@style/IconFont"
                        android:text="@string/transportation"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/ClassFont"
                        android:text="交通/旅行"
                        app:layout_constraintEnd_toEndOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"></TextView>
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/other"
                    android:tag="other">

                    <TextView
                        android:id="@+id/textView7"
                        style="@style/IconFont"
                        android:text="@string/other"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/ClassFont"
                        android:text="其他"
                        app:layout_constraintEnd_toEndOf="@+id/textView7"
                        app:layout_constraintStart_toStartOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/textView7"></TextView>
                </android.support.constraint.ConstraintLayout>

            </GridLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/usage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="用途"
                android:textSize="24sp"></TextView>

            <EditText
                android:id="@+id/usage_text"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:textSize="20dp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usage">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="日期"
                android:textSize="24sp"></TextView>
            <DatePicker
                android:theme="@android:style/Theme.Holo.Light"
                android:calendarViewShown="false"

                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></DatePicker>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="金额"
                android:textSize="24sp"></TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/expense_text"
                    android:layout_width="351dp"
                    android:layout_height="50dp"
                    android:gravity="end"
                    android:textSize="20dp"></EditText>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="元"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="bottom | end"
                    android:textSize="30sp"></TextView>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/finish_input_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/submit_button"
            android:padding="10dp"
            android:text="完成"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout3"></Button>
    </android.support.constraint.ConstraintLayout>
</ScrollView>